--- a/style.css
+++ b/style.css
@@ -2,10 +2,11 @@
     --main_color: #2A3647;
     --main_color_dark: #091931;
     --background_main: #F6F7F8;
+    --main_font: 'Inter', sans-serif;
 }
 
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Inter';
+    font-family: var(--main_font);
 }
