sidebar wip, added sub-folder for img

--- a/assets/templates/header/header.html
+++ b/assets/templates/header/header.html
@@ -3,7 +3,7 @@
         Kanban Project Management Tool
     </p>
     <div class="header_login">
-        <img src="/assets/img/Property 1=hover.png" alt="">
-        <img src="/assets/img/Property 1=Default.png" alt="">
+        <img src="/assets/img/header/Property 1=hover.png" alt="Fragezeichen">
+        <img src="/assets/img/header/Property 1=Default.png" alt="User">
     </div>
 </section>
