--- a/assets/templates/header/header.css
+++ b/assets/templates/header/header.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 1440px;
+  width: auto;
   padding: 20px 40px 20px 348px;
   background-color: #fff;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);
