--- a/assets/templates/sidebar/sidebar.css
+++ b/assets/templates/sidebar/sidebar.css
@@ -1,5 +1,6 @@
 :root {
   --main_color: #2a3647;
+  --main_color_lighter: #354458;
   --main_color_dark: #091931;
   --background_main: #f6f7f8;
   --main_font: "Inter", sans-serif;
@@ -16,74 +17,51 @@
   align-items: center;
   flex-shrink: 0;
   flex-direction: column;
-  width: 232px;
-  height: 1024px;
+  max-width: 232px;
+  width: 100%;
+  height: 100%;
   padding: 64px 0px;
   background-color: var(--main_color);
   box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
   color: rgba(168, 168, 168, 1);
 }
 
+.sidebar_menu_container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-top: auto;
+  width: 100%;
+  gap: 15px;
+}
+
 .sidebar_menu {
   display: flex;
   justify-content: center;
-  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding: 8px 0px;
+  gap: 8px;
+}
+
+.sidebar_menu:hover {
+  cursor: pointer;
+  background-color: var(--main_color_lighter);
+}
+
+.footer_link {
+  display: flex;
+  justify-content: center;
   align-items: flex-start;
-  gap: 15px;  
-}
-
-.sidebar_menu_1 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 232px;
-  height: 46px;
-  padding: 8px 56px;
-  gap: 8px;
-  border-radius: 8px;
-}
-
-.sidebar_menu_1:hover {
-    cursor: pointer;
-    background-color: var(--main_color_dark);
-}
-
-.sidebar_menu_2 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 232px;
-  height: 46px;
-  padding: 8px 56px;
-  gap: 8px;
-}
-
-.sidebar_menu_3 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 232px;
-  height: 46px;
-  padding: 8px 56px;
-  gap: 8px;
-}
-
-.sidebar_menu_4 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 232px;
-  height: 46px;
-  padding: 8px 56px;
-  gap: 8px;
-}
-
-.frame21 {
-  display: flex;
-  padding: 243px 0px 0px 52px;
   flex-direction: column;
-  justify-content: flex-end;
-  align-items: flex-start;
+  padding: 240px 0px 0px 0px;
   gap: 4px;
-  align-self: stretch;
+}
+
+.footer_link a {
+    padding: 8px;
+  text-decoration: none;
+  color: rgba(168, 168, 168, 1);
 }
