--- a/assets/templates/sidebar/sidebar.html
+++ b/assets/templates/sidebar/sidebar.html
@@ -1,27 +1,27 @@
 <section class="sidebar">
   <img src="/assets/img/sidebar/Capa 2.png" alt="Logo" />
 
-  <div class="sidebar_menu">
-    <div class="sidebar_menu_1">
-      <img src="/assets/img/sidebar/addTask.png" alt="" />
+  <div class="sidebar_menu_container">
+    <div class="sidebar_menu">
+      <img src="/assets/img/sidebar/summary.png" alt="" />
       <p>Summary</p>
     </div>
-    <div class="sidebar_menu_2">
-      <img src="/assets/img/sidebar/board.png" alt="" />
+    <div class="sidebar_menu">
+      <img src="/assets/img/sidebar/addTask.png" alt="" />
       <p>Add Task</p>
     </div>
-    <div class="sidebar_menu_3">
-      <img src="/assets/img/sidebar/summary.png" alt="" />
+    <div class="sidebar_menu">
+      <img src="/assets/img/sidebar/board.png" alt="" />
       <p>Board</p>
     </div>
-    <div class="sidebar_menu_4">
+    <div class="sidebar_menu">
       <img src="/assets/img/sidebar/contacts.png" alt="" />
       <p>Contacts</p>
     </div>
   </div>
 
-  <div class="frame21">
-    <p>Privacy Policy</p>
-    <p>Legal notice</p>
+  <div class="footer_link">
+    <a href="#">Privacy Policy</a>
+    <a href="#">Legal notice</a>
   </div>
 </section>
