--- a/assets/templates/header/header.html
+++ b/assets/templates/header/header.html
@@ -1,9 +1,22 @@
-<section class="header_container">
-    <p class="header_text">
-        Kanban Project Management Tool
-    </p>
-    <div class="header_login">
-        <img src="/assets/img/header/Property 1=hover.png" alt="Fragezeichen">
-        <img src="/assets/img/header/Property 1=Default.png" alt="User">
-    </div>
-</section>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Header</title>
+
+    <link rel="stylesheet" href="./header.css">
+    <link rel="shortcut icon" href="/assets/img/favicon_light.png" type="image/x-icon">
+</head>
+<body>
+    <section class="header_container">
+        <p class="header_text">
+            Kanban Project Management Tool
+        </p>
+        <div class="header_login">
+            <img src="/assets/img/header/Property 1=hover.png" alt="Fragezeichen">
+            <img src="/assets/img/header/Property 1=Default.png" alt="User">
+        </div>
+    </section>
+</body>
+</html>
