--- a/assets/templates/sidebar/sidebar.css
+++ b/assets/templates/sidebar/sidebar.css
@@ -13,14 +13,13 @@
   left: 0;
   z-index: 2;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   flex-shrink: 0;
   flex-direction: column;
   max-width: 232px;
   width: 100%;
-  height: 100%;
-  padding: 64px 0px;
+  height: 100vh;
   background-color: var(--main_color);
   box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
   color: rgba(168, 168, 168, 1);
@@ -31,7 +30,6 @@
   justify-content: center;
   flex-direction: column;
   align-items: flex-start;
-  margin-top: auto;
   width: 100%;
   gap: 15px;
 }
@@ -46,6 +44,10 @@
   gap: 8px;
 }
 
+.sidebar_3 img {
+  margin-right: 24px;
+}
+
 .sidebar_menu:hover {
   cursor: pointer;
   background-color: var(--main_color_lighter);
@@ -56,12 +58,11 @@
   justify-content: center;
   align-items: flex-start;
   flex-direction: column;
-  padding: 240px 0px 0px 0px;
   gap: 4px;
 }
 
 .footer_link a {
-    padding: 8px;
+  padding: 8px;
   text-decoration: none;
   color: rgba(168, 168, 168, 1);
 }
