--- a/assets/css/add_task.css
+++ b/assets/css/add_task.css
@@ -43,6 +43,36 @@ h1 {
     gap: 16px;
 }
 
+.prio_category h2 {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.prio_category_span {
+    display: flex;
+    padding: 4px 16px;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    flex: 1 0 0;
+    border-radius: 10px;
+    background: #FFF;
+    cursor: pointer;
+
+    /* nuevo */
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.10);
+}
+
+.prio_category_span:hover {
+    box-shadow: -2px 6px 2px 1px rgba(0, 0, 0, 0.10);
+}
+
+.prio_category_span span {
+    display: flex;
+    align-items: center;
+}
+
 .main_content {
     display: flex;
     flex-direction: column;
@@ -59,7 +89,6 @@ h1 {
     border-radius: 10px;
     border: 1px solid #D1D1D1;
     background: #FFF;
-    color: #D1D1D1;
 
     /* Version 2/t6 */
     font-family: Inter;
