--- a/assets/templates/sidebar/sidebar.html
+++ b/assets/templates/sidebar/sidebar.html
@@ -8,29 +8,29 @@
     <link rel="stylesheet" href="./sidebar.css" />
     <link
       rel="shortcut icon"
-      href="/assets/img/favicon_light.png"
+      href="./assets/img/favicon_light.png"
       type="image/x-icon"
     />
   </head>
   <body>
     <section class="sidebar">
-      <img src="/assets/img/sidebar/Capa 2.png" alt="Logo" />
+      <img src="./assets/img/sidebar/Capa 2.png" alt="Logo" />
 
       <div class="sidebar_menu_container">
         <div class="sidebar_menu">
-          <img src="/assets/img/sidebar/summary.png" alt="" />
+          <img src="./assets/img/sidebar/summary.png" alt="" />
           <p>Summary</p>
         </div>
         <div class="sidebar_menu">
-          <img src="/assets/img/sidebar/addTask.png" alt="" />
+          <img src="./assets/img/sidebar/addTask.png" alt="" />
           <p>Add Task</p>
         </div>
         <div class="sidebar_menu sidebar_3">
-          <img src="/assets/img/sidebar/board.png" alt="" />
+          <img src="./assets/img/sidebar/board.png" alt="" />
           <p>Board</p>
         </div>
         <div class="sidebar_menu">
-          <img src="/assets/img/sidebar/contacts.png" alt="" />
+          <img src="./assets/img/sidebar/contacts.png" alt="" />
           <p>Contacts</p>
         </div>
       </div>
