change header html

--- a/assets/templates/header/header.html
+++ b/assets/templates/header/header.html
@@ -6,7 +6,7 @@
     <title>Header</title>
 
     <link rel="stylesheet" href="./header.css">
-    <link rel="shortcut icon" href="/assets/img/favicon_light.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/img/favicon_light.png" type="image/x-icon">
 </head>
 <body>
     <section class="header_container">
@@ -14,8 +14,8 @@
             Kanban Project Management Tool
         </p>
         <div class="header_login">
-            <img src="/assets/img/header/Property 1=hover.png" alt="Fragezeichen">
-            <img src="/assets/img/header/Property 1=Default.png" alt="User">
+            <img src="./assets/img/header/Property 1=hover.png" alt="Fragezeichen">
+            <img src="./assets/img/header/Property 1=Default.png" alt="User">
         </div>
     </section>
 </body>
