--- a/assets/templates/sidebar/sidebar.html
+++ b/assets/templates/sidebar/sidebar.html
@@ -35,7 +35,7 @@
         </div>
       </div>
 
-      <div class="footer_link">
+      <div class="sidebar_footer_link">
         <a href="#">Privacy Policy</a>
         <a href="#">Legal notice</a>
       </div>
