--- a/assets/css/summary.css
+++ b/assets/css/summary.css
@@ -1,8 +1,8 @@
-body {
+/* body {
     width: 1440px;
     height: 1024px;
     background: #F6F7F8;
-}
+} */
 
 
 .summary_container {
@@ -29,6 +29,7 @@ body {
     justify-content: center;
     align-items: center;
     gap: 30px;
+    margin-right: 400px;
 }
 
 .join360 {
