--- a/assets/css/add_task.css
+++ b/assets/css/add_task.css
@@ -16,9 +16,10 @@ main {
 
 h1 {
     color: #000;
-    margin: 16px 0px;
+    margin: 0px;
+    margin-top: 48px;
+    margin-bottom: 8px;
     /* Version 2/t1 */
-    font-family: Inter;
     font-size: 61px;
     font-style: normal;
     font-weight: 700;
@@ -100,7 +101,7 @@ h1 {
 .main_content {
     display: flex;
     flex-direction: column;
-    gap: 32px;
+    gap: 16px;
 }
 
 .input {
@@ -152,7 +153,7 @@ h1 {
 
 .form_content {
     display: flex;
-    gap: 8px;
+    gap: 32px;
 }
 
 .form_button_container {
