--- a/assets/templates/header/header.css
+++ b/assets/templates/header/header.css
@@ -3,6 +3,7 @@
   justify-content: space-between;
   align-items: center;
   width: auto;
+  height: auto;
   padding: 20px 40px 20px 348px;
   background-color: #fff;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);
@@ -26,4 +27,21 @@
 
 .header_login:nth-child(2):hover {
   cursor: pointer;
+}
+
+.header_logo {
+  display: none;
+}
+
+@media (max-width: 1000px) {
+  .header_container {
+    padding: 20px 16px;
+    height: auto;
+  }
+  .header_text {
+    display: none;
+  }
+  .header_logo {
+    display: block;
+  }
 }
