--- a/assets/templates/header/header.html
+++ b/assets/templates/header/header.html
@@ -6,10 +6,14 @@
     <title>Header</title>
 
     <link rel="stylesheet" href="./header.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="shortcut icon" href="./assets/img/favicon_light.png" type="image/x-icon">
 </head>
 <body>
     <section class="header_container">
+
+        <img class="header_logo" src="./assets/img/header/header_mobile_logo.png" alt="Logo">
+
         <p class="header_text">
             Kanban Project Management Tool
         </p>
