--- a/assets/templates/sidebar/sidebar.css
+++ b/assets/templates/sidebar/sidebar.css
@@ -21,7 +21,6 @@
   width: 100%;
   height: 100vh;
   background-color: var(--main_color);
-  box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
   color: rgba(168, 168, 168, 1);
 }
 
@@ -32,6 +31,7 @@
   align-items: flex-start;
   width: 100%;
   gap: 15px;
+  font-family: var(--main_font);
 }
 
 .sidebar_menu {
@@ -50,6 +50,8 @@
 
 .sidebar_menu:hover {
   cursor: pointer;
+  border-radius: 10px;
+  border-width: 10px;
   background-color: var(--main_color_lighter);
 }
 
@@ -59,10 +61,61 @@
   align-items: flex-start;
   flex-direction: column;
   gap: 4px;
+  font-family: var(--main_font);
 }
 
 .sidebar_footer_link a {
   padding: 8px;
   text-decoration: none;
+  font-size: 16px;
   color: rgba(168, 168, 168, 1);
+}
+
+.sidebar_footer_link a:hover {
+  cursor: pointer;
+  color: #29abe2;
+}
+
+@media (max-width: 1000px) {
+  .sidebar {
+    position: fixed;
+    bottom: 0;
+    top: unset;
+    justify-content: space-between;
+    max-width: 100%;
+    height: auto;
+    padding: 0 16px;
+    box-sizing: border-box;
+  }
+
+  .sidebar img,
+  .sidebar_footer_link {
+    display: none;
+  }
+
+  .sidebar_menu_container {
+    flex-direction: row;
+    justify-content: space-around;
+    gap: 0;
+  }
+
+  .sidebar_menu {
+    flex-direction: column;
+    width: auto;
+    height: auto;
+    padding: 15px 0;
+    gap: 0;
+    height: auto;
+    text-align: center;
+  }
+
+  .sidebar_3 img {
+    margin: 0;
+  }
+  .sidebar_menu img {
+    display: block;
+  }
+  .sidebar_menu p {
+    margin: 4px;
+  }
 }
