--- a/assets/templates/header/header.html
+++ b/assets/templates/header/header.html
@@ -6,7 +6,7 @@
         Kanban Project Management Tool
     </p>
     <div class="header_login">
-        <img src="./assets/img/header/Property 1=hover.png" alt="Fragezeichen">
-        <img src="./assets/img/header/Property 1=Default.png" alt="User">
+        <img src="./assets/img/header/property_default.png" alt="Fragezeichen">
+        <img src="./assets/img/header/property_user_default.png" alt="User">
     </div>
 </section>
