--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,7 +1,14 @@
 :root {
-    --main_color: #2A3647;
+    --main_color: #2a3647;
     --main_color_dark: #091931;
-    --background_main: #F6F7F8;
-    --main_font: 'Inter', sans-serif;
+    --background_main: #f6f7f8;
+    --main_font: "Inter", sans-serif;
     --backup_font: system-ui, sans-serif;
-}
+  }
+  
+  body {
+    margin: 0;
+    padding: 0;
+    font-family: var(--main_font);
+    background-color: var(--background_main);
+  }
