--- a/assets/templates/sidebar/sidebar.css
+++ b/assets/templates/sidebar/sidebar.css
@@ -3,6 +3,8 @@
   --main_color_lighter: #354458;
   --main_color_dark: #091931;
   --background_main: #f6f7f8;
+  --lightgray_font: #c0c0c0;
+  --lightblue_font: #29abe2;
   --main_font: "Inter", sans-serif;
   --backup_font: system-ui, sans-serif;
 }
@@ -21,7 +23,7 @@
   width: 100%;
   height: 100vh;
   background-color: var(--main_color);
-  color: rgba(168, 168, 168, 1);
+  color: var(--lightgray_font);
 }
 
 .sidebar_menu_container {
@@ -44,8 +46,12 @@
   gap: 8px;
 }
 
-.sidebar_3 img {
-  margin-right: 24px;
+.sidebar_menu :first-child {
+  width: auto;
+}
+
+.sidebar_menu :nth-child(2) {
+  width: 100px;
 }
 
 .sidebar_menu:hover {
@@ -68,13 +74,15 @@
   padding: 8px;
   text-decoration: none;
   font-size: 16px;
-  color: rgba(168, 168, 168, 1);
+  color: var(--lightgray_font);
 }
 
 .sidebar_footer_link a:hover {
   cursor: pointer;
-  color: #29abe2;
+  color: var(--lightblue_font);
 }
+
+/********** MEDIA QUERY **********/
 
 @media (max-width: 1000px) {
   .sidebar {
@@ -104,13 +112,11 @@
     width: auto;
     height: auto;
     padding: 15px 0;
-    gap: 0;
-    height: auto;
     text-align: center;
   }
 
-  .sidebar_3 img {
-    margin: 0;
+  .sidebar_menu :nth-child(2) {
+    width: auto;
   }
   .sidebar_menu img {
     display: block;
