--- a/assets/templates/sidebar/sidebar.html
+++ b/assets/templates/sidebar/sidebar.html
@@ -1,21 +1,29 @@
 <section class="sidebar">
-  <img src="/assets/img/sidebar/Capa 2.png" alt="Logo" />
+  <img src="./assets/img/sidebar/join_logo_white.png" alt="Logo" />
 
   <div class="sidebar_menu_container">
     <div class="sidebar_menu">
-      <img src="/assets/img/sidebar/summary.png" alt="" />
+      <div>
+        <img src="./assets/img/sidebar/summary.png" alt="Summary" />
+      </div>
       <p>Summary</p>
     </div>
     <div class="sidebar_menu">
-      <img src="/assets/img/sidebar/addTask.png" alt="" />
+      <div>
+        <img src="./assets/img/sidebar/addTask.png" alt="Add Task" />
+      </div>
       <p>Add Task</p>
     </div>
-    <div class="sidebar_menu sidebar_3">
-      <img src="/assets/img/sidebar/board.png" alt="" />
+    <div class="sidebar_menu">
+      <div>
+        <img src="./assets/img/sidebar/board.png" alt="Board" />
+      </div>
       <p>Board</p>
     </div>
     <div class="sidebar_menu">
-      <img src="/assets/img/sidebar/contacts.png" alt="" />
+      <div>
+        <img src="./assets/img/sidebar/contacts.png" alt="Contacts" />
+      </div>
       <p>Contacts</p>
     </div>
   </div>
