--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 :root {
-    --main_color: #2A3647;
+    --main_color: #2a3647;
+    --main_color_lighter: #354458;
     --main_color_dark: #091931;
-    --background_main: #F6F7F8;
-    --main_font: 'Inter', sans-serif;
+    --background_main: #f6f7f8;
+    --lightgray_font: #c0c0c0;
+    --lightblue_font: #29abe2;
+    --main_font: "Inter", sans-serif;
     --backup_font: system-ui, sans-serif;
-}
+  }
 
 body {
     margin: 0;
