--- a/assets/templates/header/header.html
+++ b/assets/templates/header/header.html
@@ -1,12 +1,13 @@
 <section class="header_container">
+  <img
+    class="header_logo"
+    src="./assets/img/header/header_mobile_logo.png"
+    alt="Logo"
+  />
 
-    <img class="header_logo" src="./assets/img/header/header_mobile_logo.png" alt="Logo">
-
-    <p class="header_text">
-        Kanban Project Management Tool
-    </p>
-    <div class="header_login">
-        <img src="./assets/img/header/property_default.png" alt="Fragezeichen">
-        <img src="./assets/img/header/property_user_default.png" alt="User">
-    </div>
+  <p class="header_text">Kanban Project Management Tool</p>
+  <div class="header_login">
+    <img src="./assets/img/header/property_default.png" alt="Fragezeichen" />
+    <img src="./assets/img/header/property_user_default.png" alt="User" />
+  </div>
 </section>
