--- a/assets/templates/sidebar/sidebar.css
+++ b/assets/templates/sidebar/sidebar.css
@@ -19,7 +19,7 @@
   align-items: center;
   flex-shrink: 0;
   flex-direction: column;
-  max-width: 232px;
+  max-width: 232px; /* auf 200px? */
   width: 100%;
   height: 100vh;
   background-color: var(--main_color);
