--- a/assets/templates/sidebar/sidebar.html
+++ b/assets/templates/sidebar/sidebar.html
@@ -1,21 +1,21 @@
 <section class="sidebar">
-  <img src="/assets/img/sidebar/join_logo_white.png" alt="Logo" />
+  <img src="./assets/img/sidebar/join_logo_white.png" alt="Logo" />
 
   <div class="sidebar_menu_container">
     <div class="sidebar_menu">
-      <img src="/assets/img/sidebar/summary.png" alt="Summary" />
+      <img src="./assets/img/sidebar/summary.png" alt="Summary" />
       <p>Summary</p>
     </div>
     <div class="sidebar_menu">
-      <img src="/assets/img/sidebar/addTask.png" alt="Add Task" />
+      <img src="./assets/img/sidebar/addTask.png" alt="Add Task" />
       <p>Add Task</p>
     </div>
     <div class="sidebar_menu sidebar_3">
-      <img src="/assets/img/sidebar/board.png" alt="Board" />
+      <img src="./assets/img/sidebar/board.png" alt="Board" />
       <p>Board</p>
     </div>
     <div class="sidebar_menu">
-      <img src="/assets/img/sidebar/contacts.png" alt="Contacts" />
+      <img src="./assets/img/sidebar/contacts.png" alt="Contacts" />
       <p>Contacts</p>
     </div>
   </div>
