--- a/assets/templates/header/header.html
+++ b/assets/templates/header/header.html
@@ -8,6 +8,14 @@
   <p class="header_text">Kanban Project Management Tool</p>
   <div class="header_login">
     <img src="./assets/img/header/property_default.png" alt="Fragezeichen" />
-    <img src="./assets/img/header/property_user_default.png" alt="User" />
+    <img onclick="toggleSubMenu()" src="./assets/img/header/property_user_default.png" alt="User" />
+  </div>
+</section>
+
+<section class="header_submenu">
+  <div class="header_submenu_container w3-center w3-animate-right">
+    <a href="#">Legal Notice</a>
+    <a href="#">Privacy Policy</a>
+    <a href="#">Log out</a>
   </div>
 </section>
