--- a/assets/templates/sidebar/sidebar.css
+++ b/assets/templates/sidebar/sidebar.css
@@ -10,16 +10,17 @@
 }
 
 .sidebar {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 2;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  text-align: center;
   flex-shrink: 0;
   flex-direction: column;
-  max-width: 232px; /* auf 200px? */
+  max-width: 200px;
   width: 100%;
   height: 100vh;
   background-color: var(--main_color);
@@ -56,8 +57,6 @@
 
 .sidebar_menu:hover {
   cursor: pointer;
-  border-radius: 10px;
-  border-width: 10px;
   background-color: var(--main_color_lighter);
 }
 
