--- a/assets/css/add_task.css
+++ b/assets/css/add_task.css
@@ -123,10 +123,6 @@ h1 {
     line-height: 120%; /* 24px */
 }
 
-.input:focus {
-    color: #000;
-}
-
 .select {
     color: #000;
     /* Version 2/t6 */
@@ -173,7 +169,6 @@ h1 {
     border: 1px solid #2A3647;
     background: #F6F7F8;
     /* Version 2/t6 */
-    font-family: Inter;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
@@ -184,10 +179,54 @@ h1 {
     border-radius: 10px;
     background: #2A3647;
     color: #FFF;
-
-    font-family: Inter;
     font-size: 21px;
     font-style: normal;
     font-weight: 700;
     line-height: 120%; /* 25.2px */
+}
+
+.subtask_input {
+    display: flex;
+    border: 1px solid #D1D1D1;
+    padding-right: 16px;
+    background-color: white;
+    border-radius: 10px;
+}
+
+.subtask_input input {
+    flex-grow: 2;
+    border: none;
+}
+
+.subtask_input:focus-within {
+    border: 1px solid black;
+}
+
+.subtask_input input:focus {
+    outline: none;
+}
+
+.subtask_input span {
+    display: flex;
+    align-items: center;
+    padding: 2px 8px;
+    border-radius: 40px;
+    cursor: pointer;
+}
+
+.subtask_input button {
+    border: none;
+    background-color: white;
+    font-size: 32px;
+    font-weight: 300;
+    border-radius: 40px;
+    cursor: pointer;
+}
+
+.subtask_input span:hover {
+    background-color: lightgray;
+}
+
+.subtask_input span:hover button {
+    background-color: lightgray;
 }
