--- a/assets/css/summary.css
+++ b/assets/css/summary.css
@@ -2,291 +2,404 @@
     width: 1440px;
     height: 1024px;
     background: #F6F7F8;
-} */
-
+}  */
 
 .summary_container {
-    display: flex;
-    flex-direction: column;
-} 
+  display: flex;
+  flex-direction: column;
+}
 
 .summary_main_container {
-    display: flex;
-    justify-content: start;
-    margin-left: 328px;
+  display: flex;
+  justify-content: start;
+  margin-left: 328px;
 }
 
 .summary_overview {
-    display: flex;
-    width: 560px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 28px;
+  display: flex;
+  width: 560px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 28px;
 }
 
 .summary_headline {
-    display: inline-flex;
-    justify-content: start;
-    align-items: center;
-    gap: 30px;
-    margin-left: 328px;
+  display: inline-flex;
+  justify-content: start;
+  align-items: center;
+  gap: 30px;
+  margin-left: 328px;
 }
 
 .join360 {
-    color: #000;
+  color: #000;
 
-    /* Version 2/t1 */
-    font-family: Inter;
-    font-size: 61px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 120%; /* 73.2px */
+  /* Version 2/t1 */
+  font-family: Inter;
+  font-size: 61px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%; /* 73.2px */
 }
 
 .summary_headline_text {
-    color: #2A3647;
+  color: #2a3647;
 
-    /* Version 2/t5 */
-    font-family: Inter;
-    font-size: 27px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 120%; /* 32.4px */
+  /* Version 2/t5 */
+  font-family: Inter;
+  font-size: 27px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%; /* 32.4px */
 }
 
 .summary_headline_stroke {
-    width: 0px;
-    height: 59px;
-    stroke-width: 3px;
-    stroke: #29ABE2;
+  width: 0px;
+  height: 59px;
+  stroke-width: 3px;
+  stroke: #29abe2;
 }
 
 .summary_doings {
-    display: flex;
-    width: 560px;
-    height: 168px;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 32px;
+  display: flex;
+  width: 560px;
+  height: 168px;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 32px;
 }
 
 .summary_todo {
-    display: flex;
-    width: 264px;
-    height: 168px;
-    /* padding: 38px 19px; */
-    justify-content: center;
-    align-items: center;
-    gap: 18px;
-    flex-shrink: 0;
-    border-radius: 30px;
-    background: var(--white, #FFF);
+  display: flex;
+  width: 264px;
+  height: 168px;
+  /* padding: 38px 19px; */
+  justify-content: center;
+  align-items: center;
+  gap: 18px;
+  flex-shrink: 0;
+  border-radius: 30px;
+  background: var(--white, #fff);
 
-    /* nuevo */
-    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.10);
+  /* nuevo */
+  box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
 }
 
-.summary_todo:hover  {
-    cursor: pointer;
-    background-color: #2A3647;
-    transform: scale(1.05);
+.summary_todo:hover {
+  cursor: pointer;
+  background-color: #2a3647;
+  transform: scale(1.05);
 }
 
 .summary_todo:hover .summary_number {
-    color: white;
+  color: white;
 }
 
 .summary_todo:hover .summary_text_small {
-    color: white;
+  color: white;
+}
+
+.summary_todo:hover .summary_img {
+    background-image: url("../img/img_summary/penWhite.png");
+}
+
+.summary_todo:hover .summary_img_hook {
+    background-image: url("../img/img_summary/hookWhite.png");
 }
 
 .summary_todo_nummberAndText {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .summary_img {
+  width: 69px;
+  height: 69px;
+  background-image: url("../img/img_summary/pen.png");
+  background-size: cover;
+}
+
+.summary_img_hook {
     width: 69px;
     height: 69px;
+    background-image: url("../img/img_summary/hook.png");
+    background-size: cover;
 }
 
 .summary_number {
-    color: #000;
-    text-align: center;
-    font-family: Inter;
-    font-size: 64px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 120%; /* 76.8px */
-    margin: 0;
+  color: #000;
+  text-align: center;
+  font-family: Inter;
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 120%; /* 76.8px */
+  margin: 0;
 }
 
 .summary_text_small {
-    color: #2A3647;
+  color: #2a3647;
 
-    /* Version 2/t6 */
-    font-family: Inter;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 120%; /* 24px */
+  /* Version 2/t6 */
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%; /* 24px */
 }
 
-
 .summary_urgent_container {
-    display: flex;
-    width: 560px;
-    height: 168px;
-    /* padding: 28px 48px; */
-    justify-content: center;
-    align-items: center;
-    gap: 61px;
-    border-radius: 30px;
-    background: var(--white, #FFF);
-    /* nuevo */
-    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.10);
-    margin-top: 28px;
-    margin-bottom: 28px;
+  display: flex;
+  width: 560px;
+  height: 168px;
+  /* padding: 28px 48px; */
+  justify-content: center;
+  align-items: center;
+  gap: 61px;
+  border-radius: 30px;
+  background: var(--white, #fff);
+  /* nuevo */
+  box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
+  margin-top: 28px;
+  margin-bottom: 28px;
 }
 
 .summary_urgent_text {
-    color: #2A3647;
+  color: #2a3647;
 
-    /* Version 2/body */
-    font-family: Inter;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 120%; /* 19.2px */
+  /* Version 2/body */
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%; /* 19.2px */
 }
 
 .summary_urgent_container:hover {
-    cursor: pointer;
-    background-color: #2A3647;
-    transform: scale(1.05);  
+  cursor: pointer;
+  background-color: #2a3647;
+  transform: scale(1.05);
 }
 
 .summary_urgent_container:hover .summary_number {
-    color: white;
+  color: white;
 }
 
 .summary_urgent_container:hover .summary_urgent_text {
-    color: white;
+  color: white;
 }
 
 .summary_urgent_container:hover .summary_date {
-    color: white;
+  color: white;
 }
 
 .summary_urgent_field {
-    display: flex;
-    align-items: center;
-    gap: 18px;
+  display: flex;
+  align-items: center;
+  gap: 18px;
 }
 
 .summary_stroke {
-    width: 0px;
-    height: 102.023px;
-    flex-shrink: 0;
-    stroke-width: 2px;
-    stroke: var(--Style, #D1D1D1);
-    margin-left: 28px;
-    margin-right: 28px;
+  width: 0px;
+  height: 102.023px;
+  flex-shrink: 0;
+  stroke-width: 2px;
+  stroke: var(--Style, #d1d1d1);
+  margin-left: 28px;
+  margin-right: 28px;
 }
 
 .summary_date {
-    color: #2A3647;
-    font-family: Inter;
-    font-size: 21px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 120%; /* 25.2px */
-    margin: 0;
-    padding-bottom: 13px;
+  color: #2a3647;
+  font-family: Inter;
+  font-size: 21px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%; /* 25.2px */
+  margin: 0;
+  padding-bottom: 13px;
 }
 
 .summary_tasks {
-    display: flex;
-    width: 560px;
-    height: 170px;
-    padding: 1px 0px;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 28px;
+  display: flex;
+  width: 560px;
+  height: 170px;
+  padding: 1px 0px;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 28px;
 }
 
 .summary_tasks_field {
-    display: flex;
-    width: 168px;
-    height: 168px;
-    /* padding: 25px 0px; */
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 13px;
-    flex-shrink: 0;
-    border-radius: 30px;
-    background: var(--white, #FFF);
+  display: flex;
+  width: 168px;
+  height: 168px;
+  /* padding: 25px 0px; */
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 13px;
+  flex-shrink: 0;
+  border-radius: 30px;
+  background: var(--white, #fff);
 
-    /* nuevo */
-    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.10);
+  /* nuevo */
+  box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
 }
 
 .summary_tasks_text {
-    color: #2A3647;
-    text-align: center;
-    
-    /* Version 2/t6 */
-    font-family: Inter;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 120%; /* 24px */   
+  color: #2a3647;
+  text-align: center;
+
+  /* Version 2/t6 */
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%; /* 24px */
 }
 
 .summary_tasks_field:hover {
-    cursor: pointer;
-    background-color: #2A3647;
-    transform: scale(1.1);  
+  cursor: pointer;
+  background-color: #2a3647;
+  transform: scale(1.1);
 }
 
-.summary_tasks_field:hover .summary_number {
-    color: white;
-}
-
+.summary_tasks_field:hover .summary_number,
 .summary_tasks_field:hover .summary_tasks_text {
-    color: white;
+  color: white;
 }
 
 .summary_greeting {
-    display: inline-flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 3px;
-    margin-left: 80px;
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 3px;
+  margin-left: 80px;
 }
 
 .summary_greeting_text {
-    width: 338px;
-    color: #2A3647;
+  width: 338px;
+  color: #2a3647;
 
-    /* Version 2/t2 */
-    font-family: Inter;
-    font-size: 47px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 120%; /* 56.4px */
+  /* Version 2/t2 */
+  font-family: Inter;
+  font-size: 47px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 120%; /* 56.4px */
 }
 
 .user_name {
-    color: var(--Ligth-blue, #29ABE2);
-    font-family: Inter;
-    font-size: 64px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 120%; /* 76.8px */
-    width: 385px;
+  color: var(--Ligth-blue, #29abe2);
+  font-family: Inter;
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%; /* 76.8px */
+  width: 385px;
 }
+
+@media (max-width: 1000px) {
+  .summary_greeting {
+    display: none;
+  }
+
+  .summary_headline {
+    margin-left: 0;
+    justify-content: center;
+    /* display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px; */
+  }
+
+  .summary_main_container {
+    margin-left: 0;
+    justify-content: center;
+  }
+
+  .join360 {
+    font-size: 47px;
+  }
+
+  .summary_headline_stroke {
+    width: 0;
+    height: 90px;
+    transform: rotate(90deg);
+  }
+
+  .summary_headline_text {
+    font-size: 20px;
+  }
+
+  .summary_doings {
+    height: 138px;
+  }
+
+  .summary_todo {
+    width: 186px;
+    height: 110px;
+    gap: 10px;
+  }
+
+  .summary_img {
+    width: 40px;
+    height: 40px;
+  }
+
+  .summary_img_hook {
+    width: 40px;
+    height: 40px;
+  }
+  
+  .summary_number {
+    font-size: 47px;
+  }
+
+  .summary_text_small {
+    font-size: 14px;
+  }
+
+  .summary_urgent_container {
+    width: 396px;
+    height: 110px;
+    gap: 20px;
+    border-radius: 20px;
+    margin-top: 0;
+    margin-left: 80px;
+  }
+
+  .arrow_icon {
+    width: 40px;
+    height: 40px;
+    flex-shrink: 0;
+  }
+
+  .summary_urgent_text {
+    font-size: 14px;
+  }
+
+  .summary_date {
+    font-size: 16px;
+  }
+
+  .summary_tasks_field {
+    width: 116px;
+    height: 116px;
+  }
+
+  .summary_tasks_text {
+    font-size: 14px;
+  }
+
+
+
+
+
+}
+
+
