--- a/assets/css/add_task.css
+++ b/assets/css/add_task.css
@@ -26,6 +26,14 @@ h1 {
     line-height: 120%; /* 73.2px */
 }
 
+.side_bar_container {
+    position: relative;
+    max-width: 200px;
+    min-width: 200px;
+    width: 100%;
+    height: 100vh;
+}
+
 .break_line {
     width: 1px;
     background-color: #D1D1D1;
