--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,14 +1,198 @@
+/********** ALLGEMEIN **********/
+
 :root {
-    --main_color: #2a3647;
-    --main_color_dark: #091931;
-    --background_main: #f6f7f8;
-    --main_font: "Inter", sans-serif;
-    --backup_font: system-ui, sans-serif;
-  }
-  
-  body {
-    margin: 0;
-    padding: 0;
-    font-family: var(--main_font);
-    background-color: var(--background_main);
-  }
+  --main_color: #2a3647;
+  --main_color_lighter: #354458;
+  --main_color_dark: #091931;
+  --background_main: #f6f7f8;
+  --card_color: #ffffff;
+  --lightgray_font: #a8a8a8;
+  --placeholder_color: #d1d1d1;
+  --lightblue_font: #29abe2;
+  --main_font: "Inter", sans-serif;
+  --backup_font: system-ui, sans-serif;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: var(--main_font);
+  background-color: var(--background_main);
+}
+
+/********** HEAD **********/
+
+.login_page_head {
+  display: flex;
+  justify-content: space-between;
+  padding: 80px 122px 0 77px;
+}
+
+.sign_up_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: -66px;
+  gap: 35px;
+}
+
+.sign_up_container img:hover {
+  cursor: pointer;
+}
+
+/********** MAIN **********/
+
+.login_page_main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+}
+
+.login_card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 652px;
+  height: 493px;
+  border-radius: 30px;
+  background-color: var(--card_color);
+}
+
+.login_card_head {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.login_card_head h1 {
+  font-size: 61px;
+  padding: 0;
+  margin: 0;
+}
+
+.login_card_center {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  margin-top: 32px;
+  margin-bottom: 20px;
+}
+
+.login_input_container {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  height: 152px;
+  gap: 32px;
+}
+
+.login_input {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 422px;
+  height: 48px;
+  padding: 12px 21px;
+  border-radius: 10px;
+  border: 1px solid var(--Style, #d1d1d1);
+  background: #fff;
+}
+
+.login_input input {
+  flex: 1;
+  height: 24px;
+  border: none;
+}
+
+.login_input input:hover,
+.login_input button:hover {
+  cursor: pointer;
+}
+
+.login_input input:focus {
+  outline: none;
+}
+
+.login_input input:focus::placeholder {
+  color: transparent;
+}
+
+.login_input input::placeholder {
+  font-size: 20px;
+  color: var(--placeholder_color);
+}
+
+.login_input button {
+  height: 24px;
+  background-color: var(--card_color);
+  border: none;
+}
+
+.login_check {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 70px; /* links oder rechtsbündig? */
+}
+
+.login_card_foot {
+  display: flex;
+  width: 322px;
+  height: 48px;
+  gap: 35px;
+}
+
+.foot_login_btn {
+  width: 110px;
+  height: 48px;
+  padding: 15px, 24px, 15px, 24px;
+  border-radius: 8px;
+  font-size: 21px;
+  font-weight: 700;
+  background-color: var(--main_color);
+  color: var(--card_color);
+}
+
+.foot_login_btn:hover {
+  cursor: pointer;
+  background-color: var(--lightblue_font);
+  border-color: var(--lightblue_font);
+  box-shadow: none;
+}
+
+.foot_guestlog_btn {
+  width: 177px;
+  height: 48px;
+  padding: 15px, 24px, 15px, 24px;
+  border-radius: 8px;
+  font-size: 21px;
+  font-weight: 700;
+  background-color: var(--card_color);
+  color: var(--main_color);
+}
+
+.foot_guestlog_btn:hover {
+  cursor: pointer;
+  color: var(--lightblue_font);
+  border-color: var(--lightblue_font);
+  box-shadow: none;
+}
+
+/********** FOOTER **********/
+
+.login_page_bottom {
+  display: flex;
+  justify-content: center;
+  margin-top: 120px;
+  gap: 16px;
+}
+
+.login_page_bottom a {
+  text-decoration: none;
+  color: var(--lightgray_font);
+}
