--- a/assets/templates/sidebar/sidebar.html
+++ b/assets/templates/sidebar/sidebar.html
@@ -4,19 +4,19 @@
   <div class="sidebar_menu_container">
     <div class="sidebar_menu">
       <img src="./assets/img/sidebar/summary.png" alt="Summary" />
-      <p>Summary</p>
+      <a href="./summary.html">Summary</a>
     </div>
     <div class="sidebar_menu">
       <img src="./assets/img/sidebar/addTask.png" alt="Add Task" />
-      <p>Add Task</p>
+      <a href="./add_task.html">Add Task</a>
     </div>
-    <div class="sidebar_menu sidebar_3">
+    <div class="sidebar_menu">
       <img src="./assets/img/sidebar/board.png" alt="Board" />
-      <p>Board</p>
+      <a href="./board.html">Board</a>
     </div>
     <div class="sidebar_menu">
       <img src="./assets/img/sidebar/contacts.png" alt="Contacts" />
-      <p>Contacts</p>
+      <a href="./contacts.html">Contacts</a>
     </div>
   </div>
 
