--- a/assets/templates/header/header.html
+++ b/assets/templates/header/header.html
@@ -16,6 +16,6 @@
   <div class="header_submenu_container w3-center w3-animate-right">
     <a href="#">Legal Notice</a>
     <a href="#">Privacy Policy</a>
-    <a href="#">Log out</a>
+    <a href="./login.html">Log out</a>
   </div>
 </section>
