--- a/assets/templates/sidebar/sidebar.html
+++ b/assets/templates/sidebar/sidebar.html
@@ -2,23 +2,24 @@
   <img src="./assets/img/sidebar/join_logo_white.png" alt="Logo" />
 
   <div class="sidebar_menu_container">
-    <div class="sidebar_menu">
-      <a href="./summary.html"><img src="./assets/img/sidebar/summary.png" alt="Summary" /></a>
-      <a href="./summary.html">Summary</a>
-    </div>
-    <div class="sidebar_menu">
-      <a href="./add_task.html"><img src="./assets/img/sidebar/addTask.png" alt="Add Task" /></a>
-      <a href="./add_task.html">Add Task</a>
-    </div>
-    <div class="sidebar_menu">
-      <a href="./board.html"><img src="./assets/img/sidebar/board.png" alt="Board" /></a>
-      <a href="./board.html">Board</a>
-    </div>
-    <div class="sidebar_menu">
-      <a href="./contacts.html"><img src="./assets/img/sidebar/contacts.png" alt="Contacts" /></a>
-      <a href="./contacts.html">Contacts</a>
-    </div>
-  </div>
+  <a href="./summary.html" class="sidebar_menu">
+    <img src="./assets/img/sidebar/summary.png" alt="Summary" />
+    <span>Summary</span>
+  </a>
+  <a href="./add_task.html" class="sidebar_menu">
+    <img src="./assets/img/sidebar/addTask.png" alt="Add Task" />
+    <span>Add Task</span>
+  </a>
+  <a href="./board.html" class="sidebar_menu">
+    <img src="./assets/img/sidebar/board.png" alt="Board" />
+    <span>Board</span>
+  </a>
+  <a href="./contacts.html" class="sidebar_menu">
+    <img src="./assets/img/sidebar/contacts.png" alt="Contacts" />
+    <span>Contacts</span>
+  </a>
+</div>
+
 
   <div class="sidebar_footer_link">
     <a href="./privacy_policy.html">Privacy Policy</a>
