--- a/assets/templates/header/header.html
+++ b/assets/templates/header/header.html
@@ -7,15 +7,17 @@
 
   <p class="header_text">Kanban Project Management Tool</p>
   <div class="header_login">
-    <img src="./assets/img/header/property_default.png" alt="Fragezeichen" />
-    <img onclick="toggleSubMenu()" src="./assets/img/header/property_user_default.png" alt="User" />
+    <a href="./help.html">
+      <img src="./assets/img/header/property_default.png" alt="Fragezeichen" />
+    </a>
+    <p class="submenu_toggle" onclick="toggleSubMenu()">SM</p>
   </div>
 </section>
 
 <section class="header_submenu">
   <div class="header_submenu_container w3-center w3-animate-right">
-    <a href="#">Legal Notice</a>
-    <a href="#">Privacy Policy</a>
-    <a href="./login.html">Log out</a>
+    <a href="./legal_notice.html">Legal Notice</a>
+    <a href="./privacy_policy.html">Privacy Policy</a>
+    <a class="log_out" href="./login.html">Log out</a>
   </div>
 </section>
